--  users table 
CREATE TABLE users (id SERIAL PRIMARY key, name TEXT);
INSERT INTO users (name) VALUES 
('Alice'),
('Bob'),
('Charlie'),
('David'),
('Eve'),
('Frank'),
('Grace'),
('Hannah'),
('Ivy'),
('Jack'),
('Kathy'),
('Leo'),
('Mona'),
('Nina'),
('Oscar'),
('Paul'),
('Quincy'),
('Rachel'),
('Sam'),
('Tina'),
('Ursula'),
('Victor'),
('Wendy'),
('Xander'),
('Yara'),
('Zane'),
('Amy'),
('Brian'),
('Clara'),
('Dan');

--  post table
CREATE TABLE posts (id SERIAL PRIMARY KEY,
url VARCHAR(255),
user_id INT REFERENCES  users ON DELETE  SET NULL );
-- user_id INT,
-- FOREIGN KEY (user_id) REFERENCES users(id) ON DELETE CASCADE );
INSERT INTO posts (url, user_id) VALUES
('http://example.com/post1', 1),
('http://example.com/post2', 2),
('http://example.com/post3', 3),
('http://example.com/post4', 4),
('http://example.com/post5', 5),
('http://example.com/post6', 1),
('http://example.com/post7', 2),
('http://example.com/post8', 3),
('http://example.com/post9', 4),
('http://example.com/post10', 5),
('http://example.com/post11', 1),
('http://example.com/post12', 2),
('http://example.com/post13', 3),
('http://example.com/post14', 4),
('http://example.com/post15', 5),
('http://example.com/post16', 1),
('http://example.com/post17', 2),
('http://example.com/post18', 3),
('http://example.com/post19', 4),
('http://example.com/post20', 5);
--  comments table 
CREATE TABLE comments ( id SERIAL PRIMARY KEY , comment TEXT,user_id INT REFERENCES users,post_id INT REFERENCES  posts);
INSERT INTO comments (comment, user_id, post_id) VALUES 
('Great post!', 1, 1),
('Thanks for sharing.', 2, 1),
('Interesting read.', 3, 2),
('Loved this!', 4, 3),
('Very informative.', 5, 4),
('I agree.', 6, 5),
('Helpful article.', 7, 6),
('Well written.', 8, 7),
('Fantastic!', 9, 8),
('Learned a lot.', 10, 9),
('Thanks!', 11, 10),
('Good job!', 12, 11),
('Nice work.', 13, 12),
('Amazing!', 14, 13),
('Useful tips.', 15, 14),
('Excellent.', 16, 15),
('Worth reading.', 17, 16),
('Brilliant.', 18, 17),
('Superb.', 19, 18),
('Great advice.', 20, 19),
('Clear and concise.', 1, 2),
('Well explained.', 2, 3),
('Good information.', 3, 4),
('Appreciate it.', 4, 5),
('Valuable content.', 5, 6),
('Thanks a lot.', 6, 7),
('Great insights.', 7, 8),
('Really helpful.', 8, 9),
('Nicely done.', 9, 10),
('Great writing.', 10, 11),
('Very helpful.', 11, 12),
('Appreciated.', 12, 13),
('Thanks for the info.', 13, 14),
('Very detailed.', 14, 15),
('Good explanation.', 15, 16),
('Clear info.', 16, 17),
('Nice article.', 17, 18),
('Good read.', 18, 19),
('Very good.', 19, 20),
('Liked it.', 20, 1);

--  authers table
CREATE TABLE authors (
    id SERIAL PRIMARY KEY,
    name TEXT
);

INSERT INTO authors (name) VALUES 
('J.K. Rowling'),
('George R.R. Martin'),
('J.R.R. Tolkien'),
('Agatha Christie'),
('Stephen King'),
('Mark Twain'),
('Jane Austen'),
('Charles Dickens'),
('F. Scott Fitzgerald'),
('Ernest Hemingway'),
('Harper Lee'),
('Gabriel Garcia Marquez'),
('J.D. Salinger'),
('Leo Tolstoy'),
('Homer'),
('Virginia Woolf'),
('James Joyce'),
('Franz Kafka'),
('H.G. Wells'),
('Oscar Wilde'),
('Edgar Allan Poe'),
('Arthur Conan Doyle'),
('Ray Bradbury'),
('Mary Shelley'),
('Herman Melville'),
('Aldous Huxley'),
('George Orwell'),
('Isaac Asimov'),
('Philip K. Dick'),
('Douglas Adams'),
('Toni Morrison'),
('Margaret Atwood'),
('Kurt Vonnegut'),
('Jules Verne'),
('C.S. Lewis'),
('Roald Dahl'),
('John Steinbeck'),
('William Faulkner'),
('Fyodor Dostoevsky'),
('Victor Hugo'),
('Vladimir Nabokov'),
('Emily Bronte'),
('Charlotte Bronte'),
('Sylvia Plath'),
('Jack London'),
('Henry James'),
('Graham Greene'),
('Joseph Conrad'),
('Robert Louis Stevenson'),
('Ralph Ellison');
--  books table

CREATE TABLE books (
    id SERIAL PRIMARY KEY,
    title TEXT,
    author_id INT REFERENCES authors(id)
);

INSERT INTO books (title, author_id) VALUES 
('Harry Potter and the Philosopher''s Stone', 1),
('Harry Potter and the Chamber of Secrets', 1),
('Harry Potter and the Prisoner of Azkaban', 1),
('A Game of Thrones', 2),
('A Clash of Kings', 2),
('A Storm of Swords', 2),
('The Fellowship of the Ring', 3),
('The Two Towers', 3),
('The Return of the King', 3),
('The Silmarillion', 3),
('Murder on the Orient Express', 4),
('The ABC Murders', 4),
('And Then There Were None', 4),
('The Shining', 5),
('It', 5),
('The Dark Tower: The Gunslinger', 5),
('The Adventures of Tom Sawyer', 6),
('Adventures of Huckleberry Finn', 6),
('Pride and Prejudice', 7),
('Sense and Sensibility', 7),
('Mansfield Park', 7),
('Emma', 7),
('A Tale of Two Cities', 8),
('Great Expectations', 8),
('David Copperfield', 8),
('Oliver Twist', 8),
('The Great Gatsby', 9),
('Tender is the Night', 9),
('This Side of Paradise', 9),
('The Old Man and the Sea', 10),
('A Farewell to Arms', 10),
('For Whom the Bell Tolls', 10),
('To Kill a Mockingbird', 11),
('One Hundred Years of Solitude', 12),
('Love in the Time of Cholera', 12),
('Chronicle of a Death Foretold', 12),
('The Catcher in the Rye', 13),
('Franny and Zooey', 13),
('War and Peace', 14),
('Anna Karenina', 14),
('The Iliad', 15),
('The Odyssey', 15),
('Mrs Dalloway', 16),
('To the Lighthouse', 16),
('Orlando', 16),
('Ulysses', 17),
('Dubliners', 17),
('A Portrait of the Artist as a Young Man', 17),
('The Metamorphosis', 18),
('The Trial', 18);

--  reviews table 
CREATE TABLE reviews (
    id SERIAL PRIMARY KEY,
    review TEXT,
    author_id INT REFERENCES authors(id),
    book_id INT REFERENCES books(id)
);

INSERT INTO reviews (review, author_id, book_id) VALUES
('An amazing start to a fantastic series.', 1, 1),
('Even better than the first book!', 1, 2),
('A wonderful continuation of the story.', 1, 3),
('Epic in every sense of the word.', 2, 4),
('Intriguing and captivating.', 2, 5),
('The best in the series so far.', 2, 6),
('A brilliant adventure.', 3, 7),
('The journey continues in an epic manner.', 3, 8),
('A satisfying conclusion to the trilogy.', 3, 9),
('A fantastic exploration of Middle-earth.', 3, 10),
('A classic mystery that keeps you guessing.', 4, 11),
('One of Christie''s best.', 4, 12),
('A brilliant twisty thriller.', 4, 13),
('Horrifyingly brilliant.', 5, 14),
('King at his best.', 5, 15),
('A gripping tale from start to finish.', 5, 16),
('A timeless adventure story.', 6, 17),
('Twain''s masterpiece.', 6, 18),
('A delightful romance.', 7, 19),
('Austen never disappoints.', 7, 20),
('A lovely story.', 7, 21),
('A perfect blend of romance and wit.', 7, 22),
('A Dickens classic.', 8, 23),
('A deeply moving story.', 8, 24),
('A beautiful tale of hope.', 8, 25),
('An engrossing narrative.', 8, 26),
('A profound commentary on the American Dream.', 9, 27),
('An exquisite piece of literature.', 9, 28),
('Fitzgerald at his finest.', 9, 29),
('A powerful story of survival.', 10, 30),
('Hemingway''s classic tale.', 10, 31),
('A gripping war story.', 10, 32),
('A must-read for everyone.', 11, 33),
('A magical realism masterpiece.', 12, 34),
('A beautiful love story.', 12, 35),
('Marquez''s finest work.', 12, 36),
('A compelling narrative.', 13, 37),
('Salinger''s classic tale.', 13, 38),
('An epic story.', 14, 39),
('Tolstoy''s masterpiece.', 14, 40),
('A tale of heroism and adventure.', 15, 41),
('A timeless classic.', 15, 42),
('A deep psychological exploration.', 16, 43),
('A profound literary work.', 16, 44),
('Woolf''s best work.', 16, 45),
('A modernist masterpiece.', 17, 46),
('Joyce at his best.', 17, 47),
('A haunting tale.', 18, 48),
('Kafka''s brilliant story.', 18, 49),
('A gripping legal thriller.', 18, 50);

-- SELECT * FROM  posts WHERE user_id IS NULL;

--  
